changed to flex style and fixed overflow issue

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,14 +1,25 @@
 html, body {
 	padding: 0;
 	margin: 0;
+	height: 100%;
+}
+
+main {
+	display: flex;
+	min-width:600px;
+	height: 92%;
+	flex-flow: row wrap;
 }
 
 .codeArea {
-	min-height: 300px;
-	width: 49.8%;
+	min-width: 300px;
+	width: 49%;
+	height: 100%;
 	border: 1px solid black; 
-	margin: 0;
+	margin: 4px;
 	padding: 0;
+	font-family: monospace;
+	overflow: auto;
 }
 
 #inputCodeArea {
